# zip-rs

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  TEST_CONSISTENCY_TABLE.txt  build.rs
.config/: insta.yaml
SPEC/: 06-TESTING-STRATEGY.md
SPEC/DOCS/: AI-DEVELOPER-GUIDE.md  PROCESS-API.md  SNAPSHOT-TESTING.md
examples/: test_format.rs  test_zip_reader.rs
src/: error.rs  lib.rs
src/ffi/: bindings.rs
src/gzip/: mod.rs
src/miniz/: Cargo.toml  bitstream.rs  crc32.rs  deflate.rs  deflate_fast.rs  huffman.rs  inflate.rs  lib.rs  lz77.rs  mod.rs  test_miniz.rs
src/platform/: mod.rs
src/process/: mod.rs  unzip.rs  zip.rs
src/unzip/: archive.rs  extractor.rs  mod.rs
src/zip/: add_stream.rs  builder.rs  data.rs  mod.rs  reader.rs  writer.rs
tests/: common.rs  errors.rs  get_zip_data.rs  get_zip_data_path.rs  inflate.rs  large_files.rs  paths.rs  special_dot.rs  unzip.rs  unzip_process.rs  weird_paths.rs  zip.rs  zip_list.rs  zip_process.rs  zipr.rs
tests/snapshots/: errors__appending_empty_directory.snap  errors__appending_single_empty_directory_non_recursive.snap  errors__empty_archive_no_files.snap  errors__non_existent_file.snap  errors__non_readable_file_skipped.snap  errors__single_empty_directory.snap  errors__single_empty_directory_non_recursive.snap  get_zip_data__get_zip_data.snap  get_zip_data_path__get_zip_data.snap  get_zip_data_path__get_zip_data_relative_paths.snap  inflate__bad_format.snap  inflate__deflate.snap  inflate__inflate-2.snap  inflate__inflate.snap  large_files__can_compress_uncompress_large_files.snap  zip__can_append_file.snap  (+53 more)
