[package]
name = "zip-rs"
version = "0.1.0"
edition = "2021"
authors = ["zip-rs contributors"]
description = "Cross-platform ZIP compression library in pure Rust"
license = "MIT"
repository = "https://github.com/r-lib/zip"
keywords = ["zip", "compression", "archive", "deflate"]
categories = ["compression", "filesystem"]

[lib]
name = "zip_rs"
path = "src/lib.rs"

[dependencies]
thiserror = "1.0"
libc = "0.2"
time = { version = "0.3", features = ["local-offset"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_SystemServices",
] }

[dev-dependencies]
rstest = "0.18"
tempfile = "3.10"
insta = "1.40"
regex = "1.10"

[build-dependencies]
bindgen = "0.69"
cc = "1.0"
